changed base64codec